--- a/Project_ASC/src/main/webapp/resources/css/bootstrap.css
+++ b/Project_ASC/src/main/webapp/resources/css/bootstrap.css
@@ -1081,9 +1081,15 @@ html {
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+@font-face {
+  font-family: 'The140';
+  src: url('/resources/fonts/The140.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-family: "The140";
+  font-size: 18px;
   line-height: 1.42857143;
   color: #333;
   background-color: #fff;
