--- a/Project_ASC/src/main/webapp/resources/css/bootstrap.css
+++ b/Project_ASC/src/main/webapp/resources/css/bootstrap.css
@@ -1082,13 +1082,13 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 @font-face {
-  font-family: 'The140';
-  src: url('/resources/fonts/The140.ttf') format('truetype');
+  font-family: 'The130';
+  src: url('/resources/fonts/THE130.TTF) format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 body {
-  font-family: "The140";
+  font-family: "The130";
   font-size: 18px;
   line-height: 1.42857143;
   color: #333;
