--- a/Project_ASC/src/main/webapp/resources/css/bootstrap.css
+++ b/Project_ASC/src/main/webapp/resources/css/bootstrap.css
@@ -1081,15 +1081,9 @@ html {
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-@font-face {
-  font-family: 'The130';
-  src: url('/resources/fonts/THE130.TTF) format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
 body {
-  font-family: "The130";
-  font-size: 18px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
   line-height: 1.42857143;
   color: #333;
   background-color: #fff;
@@ -1103,7 +1097,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: white;
+  color: #337ab7;
   text-decoration: none;
 }
 a:hover,
