--- a/Project_ASC/src/main/webapp/resources/css/scrum/scrum.css
+++ b/Project_ASC/src/main/webapp/resources/css/scrum/scrum.css
@@ -35,3 +35,43 @@
 #nextSprint {
 	margin : 0 auto;
 }
+
+/** 지수 */
+table {
+	width: 150px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+table th {
+	border: 10px solid white;
+	background-color: rgba(43, 139, 204, 0.7);
+	line-height: 2.5em;
+	text-align: center;
+	font-size: 23px;
+	color: rgb(255, 255, 255);
+}
+
+table td {
+	border: 10px solid white;
+	line-height: 2.5em;
+	text-align: center;
+	font-size: 20px;
+	color: #353232;
+}
+
+.pokerToDo {
+	background-color: rgba(204, 71, 43, 0.7);
+	
+}
+
+.pokerDone {
+	background-color: rgba(241, 196, 15, 0.54);
+	
+}
+
+.pokerAllDone {
+	background-color: rgb(224, 224, 224);
+	
+}
+
