--- a/Project_ASC/src/main/webapp/resources/css/scrum/scrum.css
+++ b/Project_ASC/src/main/webapp/resources/css/scrum/scrum.css
@@ -36,6 +36,12 @@
 	margin : 0 auto;
 }
 
+#nextSprintBtn {
+	margin-bottom : 15px;
+	font-weight : bold;
+	font-size : 15px;
+}
+
 /** 지수 */
 table {
 	width: 150px;
