나는 바보다 똥멍청이다

--- a/Project_ASC/src/main/webapp/resources/css/sb-admin-2.css
+++ b/Project_ASC/src/main/webapp/resources/css/sb-admin-2.css
@@ -8,7 +8,7 @@
   font-family: 'THE130';
   font-style: normal;
   font-weight: 400;
-  src: local('THE130'), url('/resources/fonts/THE130.ttf') format('ttf');
+  src: local('THE130'), url('/resources/fonts/LOTTE.TTF') format('ttf');
 }
 
 a {
