--- a/Project_ASC/src/main/webapp/resources/css/style.css
+++ b/Project_ASC/src/main/webapp/resources/css/style.css
@@ -123,7 +123,7 @@ input, button {
   height: 5rem;
   margin: 5rem 0 2.2rem;
   color: rgba(255, 255, 255, 0.8);
-  background: #FF3366;
+  background: #354555;
   font-size: 1.5rem;
   border-radius: 3rem;
   cursor: pointer;
