--- a/Project_ASC/src/main/webapp/resources/css/sb-admin-2.css
+++ b/Project_ASC/src/main/webapp/resources/css/sb-admin-2.css
@@ -131,7 +131,7 @@ a:focus {
 @media (min-width: 768px) {
   .sidebar {
     z-index: 1;
-    position: absolute;
+    position: fixed;
     width: 250px;
     height: 100%;
   }
