인덱스 스타일 css 변경

--- a/Project_ASC/src/main/webapp/resources/css/style.css
+++ b/Project_ASC/src/main/webapp/resources/css/style.css
@@ -52,13 +52,9 @@ input, button {
 }
 
 .demo {
-  position: absolute;
-  top: 35%;
-  left: 50%;
-  margin-left: 37rem;
-  margin-top: -27.5rem;
+  float: right;
   width: 37rem;
-  height: 103%;
+  height: 100%;
   overflow: hidden;
 }
 
